# compound-workflow-v3

./: .gitignore  orchestrator.py  pyproject.toml
.claude/: .env.example  CLAUDE.md  advisory-config.json  advisory-protocol.md  blog-content-plan.md  blog_audit_skill.md  blog_skill.md  execution-config.json  execution-config.schema.json  glossary_audit_skill.md  glossary_builder_skill.md  glossary_content_plan.md  glossary_linker_skill.md  requirements.txt  settings.json  visual-antipatterns.md
.claude/agents/: code-reviewer.md  context-loader.md  frontend-style-reviewer.md  milestone-reviewer.md  qa-browser-tester.md  research-scout.md  second-opinion-advisor.md  security-auditor.md  style-guide-auditor.md  test-analyst.md
.claude/commands/: debug-session.md  execute.md  generate-testdata.md  intake.md  plan-define.md  plan-delta.md  plan.md  release.md  retro.md  scope-check.md  status.md  synthesize.md
.claude/commands/specialists/: architecture.md  backend.md  branding.md  competition.md  data-ml.md  design.md  devops.md  domain.md  frontend.md  legal.md  llm.md  pricing.md  scraping.md  security.md  testing.md  uix.md
.claude/hooks/: lint-format.sh  on-compact.sh  pre-commit-gate.sh  scope-guard.sh  type-check.sh
.claude/scripts/: init.sh
.claude/tests/: conftest.py  test_chain_manager.py  test_pipeline_tracker.py  test_second_opinion.py
.claude/tools/: chain_manager.py  pipeline_tracker.py  second_opinion.py
.workflow/: advisory-state.json  constraints.md  decision-index.md  pipeline-status.json  project-spec.md
.workflow/decisions/: ARCH.md  BACK.md  GEN.md
.workflow/state-chain/: chain.json
core/: __init__.py  db.py  models.py
engine/: __init__.py  completeness.py  composer.py  decomposer.py  executor.py  milestone_reviewer.py  planner.py  pre_reviewer.py  renderer.py  reviewer.py  synthesizer.py  validator.py  verifier.py
prompts/: completeness.md  decompose.md  execute.md  plan.md  specialist.md  specialist_architecture.md  specialist_backend.md  specialist_branding.md  specialist_competition.md  specialist_data-ml.md  specialist_design.md  specialist_devops.md  specialist_domain.md  specialist_frontend.md  specialist_legal.md  specialist_llm.md  specialist_pricing.md  specialist_scraping.md  specialist_security.md  specialist_testing.md  specialist_uix.md  synthesize.md
prompts/antipatterns/: architecture.md  backend.md  branding.md  competition.md  data-ml.md  design.md  devops.md  domain.md  frontend.md  legal.md  llm.md  pricing.md  scraping.md  security.md  testing.md  uix.md
scripts/: enrich_glossary_citations.py  fill_empty_locale_bodies.py  fix_bad_citations.py  fix_dead_glossary_links.py  glossary_cross_locale_check.py  glossary_linker.py  glossary_schema_geo_check.py  propagate_refs.py  scan_bad_citations.py  validate_glossary_links.py
tests/: conftest.py  test_completeness.py  test_decomposer.py  test_flow.py  test_milestone_reviewer.py  test_pre_reviewer.py  test_specialist_prompts.py  test_verifier.py  test_verify_reflexion.py
website/: astro.config.mjs  package.json  vercel.json
website/public/: robots.txt  site.webmanifest
website/social/: 5-vragen-generieke-ai-faalt-email.md  5-vragen-generieke-ai-faalt-linkedin.md  ai-adoptie-juridische-beroepen-2026-email.md  ai-adoptie-juridische-beroepen-2026-linkedin.md  ai-hallucinaties-fiscaal-email.md  ai-hallucinaties-fiscaal-linkedin.md  ai-weerstand-fiscaal-advies-email.md  ai-weerstand-fiscaal-advies-linkedin.md  authority-ranking-juridische-ai-email.md  authority-ranking-juridische-ai-linkedin.md  belgische-markt-fiscale-ai-email.md  belgische-markt-fiscale-ai-linkedin.md  case-study-erfbelasting-regionale-vergelijking-email.md  case-study-erfbelasting-regionale-vergelijking-linkedin.md  case-study-tak-23-cross-domain-email.md  case-study-tak-23-cross-domain-linkedin.md  chatgpt-vs-auryth-vergelijking-email.md  chatgpt-vs-auryth-vergelijking-linkedin.md  confidence-scoring-uitgelegd-email.md  confidence-scoring-uitgelegd-linkedin.md  eu-ai-act-juridische-ai-email.md  eu-ai-act-juridische-ai-linkedin.md  fine-tuning-vs-rag-email.md  fine-tuning-vs-rag-linkedin.md  juridische-ai-tool-evalueren-email.md  juridische-ai-tool-evalueren-linkedin.md  knowledge-graph-fiscaal-recht-email.md  knowledge-graph-fiscaal-recht-linkedin.md  meertaligheid-belgisch-fiscaal-recht-email.md  meertaligheid-belgisch-fiscaal-recht-linkedin.md  onzekerheid-tegenstrijdige-bronnen-email.md  onzekerheid-tegenstrijdige-bronnen-linkedin.md  regionale-vergelijking-belgisch-fiscaal-recht-email.md  regionale-vergelijking-belgisch-fiscaal-recht-linkedin.md  temporele-versionering-juridische-ai-email.md  temporele-versionering-juridische-ai-linkedin.md  tijdsbesparing-fiscale-ai-email.md  tijdsbesparing-fiscale-ai-linkedin.md  toekomst-fiscaal-onderzoek-email.md  toekomst-fiscaal-onderzoek-linkedin.md  (+12 more)
website/social/audit/: 5-vragen-generieke-ai-faalt-audit-pack.md  achter-schermen-wetswijziging-audit-pack.md  ai-adoptie-juridische-beroepen-2026-audit-pack.md  ai-beroepsaansprakelijkheid-audit-pack.md  ai-hallucinaties-fiscaal-audit-pack.md  ai-implementeren-fiscale-praktijk-audit-pack.md  ai-weerstand-fiscaal-advies-audit-pack.md  authority-ranking-juridische-ai-audit-pack.md  belgische-markt-fiscale-ai-audit-pack.md  case-study-erfbelasting-regionale-vergelijking-audit-pack.md  case-study-tak-23-cross-domain-audit-pack.md  chatgpt-vs-auryth-vergelijking-audit-pack.md  confidence-scoring-uitgelegd-audit-pack.md  eu-ai-act-juridische-ai-audit-pack.md  fine-tuning-vs-rag-audit-pack.md  glossary-audit-report.md  hybride-zoektechnologie-audit-pack.md  juridische-ai-tool-evalueren-audit-pack.md  knowledge-graph-fiscaal-recht-audit-pack.md  meertaligheid-belgisch-fiscaal-recht-audit-pack.md  onzekerheid-tegenstrijdige-bronnen-audit-pack.md  regionale-vergelijking-belgisch-fiscaal-recht-audit-pack.md  stanford-hallucination-study-juridische-ai-audit-pack.md  temporele-versionering-juridische-ai-audit-pack.md  waarom-geen-chatbot-audit-pack.md  (+8 more)
website/src/: middleware.ts
(+1169 files in other folders)
