[project]
name = "compound-workflow"
requires-python = ">=3.11"

# =============================================================================
# Ruff — linter + formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["core", "engine"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# mypy — type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# core/ and engine/ use flat imports (from core import db) — root is already on path
mypy_path = ["."]

# Relax for tests — Pydantic StrEnum coercion (str→enum) is runtime-valid
# but mypy can't see it, so we suppress arg-type and untyped-call in tests.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
strict = false
disable_error_code = ["arg-type", "no-untyped-call"]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "smoke: Quick sanity checks (run first)",
    "integration: Cross-module integration tests",
    "functional: Feature-level acceptance tests",
    "regression: Bug fix verification tests",
    "slow: Tests that take >5s",
]
# Marker enforcement — unknown markers fail immediately
filterwarnings = ["error::pytest.PytestUnknownMarkWarning"]

# =============================================================================
# bandit — security linting
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert used in tests
]

# =============================================================================
# coverage
# =============================================================================
[tool.coverage.run]
source = ["core", "engine"]
omit = ["*/tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
